Fix: Layout issues
Adjust layout to fix visual issues.

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
   text-align: center;
   background-image: linear-gradient(to bottom, #81C784 0%, #F2FCE2 50%, #ffffff 100%);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
 }
 
 .logo {
